Added changes to config

--- a/config.yaml
+++ b/config.yaml
@@ -7,4 +7,4 @@ pswd: d02d48181c
 
 title: Tester_is_very_important
 description: New_blog_for_HW_1
-content: Super_tester_work_fast
+content: Super_tester_works_fast
